fix photo overlay cropped

--- a/css/project-overlay.css
+++ b/css/project-overlay.css
@@ -30,6 +30,7 @@
     border: 4px solid #000000;
     box-shadow: 12px 12px 0px var(--primary-color);
     background-color: #000000;
+    overflow: hidden;
     
     /* Default / Closed State (Exit animation) */
     transform: scale(0.8, 0.05) rotate(4deg) translateY(-20px);
@@ -55,8 +56,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background-color: #000000;
     opacity: 0;
     pointer-events: none;
